testsuite/tests/typecheck/should_fail/T3540.stderr

T3540.hs:4:12: error:
    • Constraint ‘a ~ Int’ used as a type
    • In the type signature:
        thing :: a ~ Int

T3540.hs:7:20: error:
    • Constraint ‘a ~ Int’ used as a type
    • In the type signature:
        thing1 :: Int -> (a ~ Int)

T3540.hs:10:13: error:
    • Constraint ‘a ~ Int’ used as a type
    • In the type signature:
        thing2 :: (a ~ Int) -> Int

T3540.hs:13:12: error:
    • Constraint ‘?dude :: Int’ used as a type
    • In the type signature:
        thing3 :: (?dude :: Int) -> Int

T3540.hs:16:11: error:
    • Constraint ‘Eq a’ used as a type
    • In the type signature:
        thing4 :: (Eq a) -> Int
